Added some sub types for array fields (EX: CoordsType) and made sure that they can be used in queries A geo query example (the sub member Latitude is used in the where part of the linq): var CheckinQuery = from Checkin in db.Checkin where Checkin.AuthorUid == db.Me && Checkin.Coords.Latitude > 32.09  select Checkin; var CheckinResult = CheckinQuery.ToArray();

--- a/Source/facebook.Linq/facebook.Linq.csproj
+++ b/Source/facebook.Linq/facebook.Linq.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Tables\Album.cs" />
     <Compile Include="Tables\Application.cs" />
     <Compile Include="Tables\Apprequest.cs" />
+    <Compile Include="Tables\ArrayTypes.cs" />
     <Compile Include="Tables\Checkin.cs" />
     <Compile Include="Tables\Comment.cs" />
     <Compile Include="Tables\CommentsInfo.cs" />
@@ -165,7 +166,6 @@
     <Compile Include="Linq\Metamodel.cs" />
     <Compile Include="Linq\Provider.cs" />
     <Compile Include="Linq\QueryBuilder.cs" />
-    <Compile Include="Linq\QueryBuilder2.cs" />
     <Compile Include="Linq\ResultEnumerator.cs" />
     <Compile Include="Linq\Table.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
