--- a/Tools/CreateTableClassesFromFacebookPages/CreateTableClassesFromFacebookPages.csproj
+++ b/Tools/CreateTableClassesFromFacebookPages/CreateTableClassesFromFacebookPages.csproj
@@ -96,7 +96,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\..\..\inetpub\wwwroot\InkChain\Server\3rdParty\facebook-csharp-sdk\Source\Facebook\Facebook-Net35.csproj">
+    <ProjectReference Include="..\..\facebook-csharp-sdk\Source\Facebook\Facebook-Net35.csproj">
       <Project>{857E540C-0092-4590-A279-F98A6B77AC0A}</Project>
       <Name>Facebook-Net35</Name>
     </ProjectReference>
