removed an unneeded build event.

--- a/Source/facebook.Linq/facebook.Linq.csproj
+++ b/Source/facebook.Linq/facebook.Linq.csproj
@@ -211,6 +211,7 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>copy /y $(TargetDir)$(TargetName)*.* $(SolutionDir)..\bin</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
 </Project>
